
    2.14.2: In progress...

     FIXED: Handle invalid device strings gracefully.


    2.14.1: Released November 27, 2020

     FIXED: Hardware retuning when dragging frequency axis with center button.
     FIXED: Removed non-functional Plot button from I/Q recording dialog.
     FIXED: Start DSP when Play button in I/Q recording dialog is clicked.
     FIXED: Tooltip for Rec button in I/Q recording dialog.
  IMPROVED: More accurate rendering of FFT fill.
  IMPROVED: Better rendering of amplitude axis.
  IMPROVED: Allow debug logging to be enabled at runtime.


      2.14: Released November 19, 2020

       NEW: Start/stop DSP via remote control.
       NEW: Device scan button in Configure I/O devices dialog.
       NEW: Added "Recent settings" menu.
       NEW: Added synchronous AM demodulator.
       NEW: Added band plan to bottom of FFT.
       NEW: Added support for DX cluster.
       NEW: Added "F" shortcut to select the frequency controller.
     FIXED: PortAudio detection on MacOS.
     FIXED: Crash when closing AFSK1200 decoder.
  IMPROVED: Make axes take precedence over demod box in plotter.


    2.13.5: Released November 7, 2020

     FIXED: Set correct buffer size for audio FFT.


    2.13.4: Released November 6, 2020

       NEW: Added man page for use by distributions.
     FIXED: Crash when time span is set and waterfall height is set to 0%.
     FIXED: Filter width is incorrectly set when demod is off.
  IMPROVED: Removed Boost.Format dependency.


    2.13.3: Released November 1, 2020

     FIXED: Crash when waterfall height is set to 100%.
  IMPROVED: Removed Boost.Program_options dependency.


    2.13.2: Released October 24, 2020

       NEW: Preliminary support for GNU Radio 3.9.
       NEW: Print UDP configuration.
       NEW: Viridis color map.
     FIXED: Loss of precision in the plotter's frequency axis.
     FIXED: Usability on smaller screen sizes.


    2.13.1: Released October 17, 2020
